2008-01-31  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-genchanges.pl: Always list all binary packages in
	the Description field of generated .changes files.

2008-01-30  Justin Pryzby  <jpryzby+d@quoininc.com>

	* utils/start-stop-daemon.c (do_help): Clarify --name and --user
	options.
	(parse_options): Reword --make-pidfile badusage.
	(pid_is_cmd): Fix typo in comment.
	* man/start-stop-daemon.8: Cosmetic fixes. Document that --chuid
	will change the group even if it has not been specified. Add EXIT
	STATUS and EXAMPLE sections.

2008-01-29  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-buildpackage.pl: Add a new -R option to be able to replace
	"debian/rules" by something else. The replacement command can contain
	parameters (and thus spaces). Fix -r option to also accept parameters.
	* man/dpkg-buildpackage.1: Document the new option and the changed
	behaviour of -r.

2008-01-28  Guillem Jover  <guillem@debian.org>

	* getopt: Rename to ...
	* libcompat: ... this.
	* configure.ac (AC_CONFIG_FILES): Likewise.
	* Makefile.am (SUBDIRS): Likewise.
	* utils/Makefile.am (INCLUDES): Likewise.
	(start_stop_daemon_LDADD): Use '../libcompat/libcompat.a' instead of
	'../getopt/libopt.a'.
	* libcompat/Makefile.am (noinst_LIBRARIES): Rename 'libopt.a' to
	'libcompat.a'.
	(libopt_a_SOURCES): Rename to ...
	(libcompat_a_SOURCES): ... this.

2008-01-27  Raphael Hertzog  <hertzog@debian.org>

	* README.feature-removal-schedule: Deprecate support of substvars
	in dpkg-source and dpkg-genchanges.
	* README.feature-removal-schedule, README.api: Deprecate support
	of custom changelog parsers that understand only the -v option.
	* README.feature-removal-schedule: Deprecate support of PGP.

2008-01-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm: Replace has_new_libs(),
	has_lost_libs(), has_new_symbols() and has_lost_symbols() by
	corresponding get_* functions.
	* scripts/dpkg-gensymbsols.pl: Display list of new/lost libs. Also