@@ -26,6 +26,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     on source only uploads to display short description of what the package is
     about.
 
+  [ Frank Lichtenheld ]
+  * Add a warning in dpkg-buildpackage if the build-dependencies are not
+    satisfied during -S. Closes: #445552
+
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
 
@@ -33,7 +37,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
   * Swedish (Peter Karlsson).
 
- -- Guillem Jover <guillem@debian.org>  Mon, 21 Jan 2008 10:11:55 +0200
+ -- Frank Lichtenheld <djpig@debian.org>  Wed, 30 Jan 2008 22:50:05 +0100
 
 dpkg (1.14.16.6) unstable; urgency=medium
 
