@@ -3,6 +3,12 @@
 	* scripts/dpkg-genchanges.pl: Always list all binary packages in
 	the Description field of generated .changes files.
 
+2008-01-30  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: Warn if build-dependencies
+	are not satisfied during -S. Also warn that this might become
+	an error in the future.
+
 2008-01-30  Justin Pryzby  <jpryzby+d@quoininc.com>
 
 	* utils/start-stop-daemon.c (do_help): Clarify --name and --user
